prevent text thats too long or names that are too long from goign over button

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -21,7 +21,9 @@
 
 }
 
-button, .target {
+#chatHome button{
+	white-space: nowrap;
+  overflow: hidden;
 	text-overflow: ellipsis;
 }
 
